(feat) Start FB auth

--- a/app/index.html
+++ b/app/index.html
@@ -24,5 +24,8 @@
     <!-- build:js(.tmp) scripts/app.js -->
     <script src="scripts/bundle/app.js"></script>
     <!-- endbuild -->
+
+    <!-- FB SDK -->
+    <div id="fb-root"></div>
   </body>
 </html>
