--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <!-- Semantic UI Styles -->
+    <!-- <link rel="stylesheet" href="../node_modules/semantic-ui/dist/semantic.min.css"> -->
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
