--- a/public/home.html
+++ b/public/home.html
@@ -12,7 +12,7 @@
   <div id="content"></div>
   <script src="scripts/app.js"></script>
   <script>
-    if (window.location.hash && window.location.hash === "#_=_") {
+    if (window.location.hash && window.location.hash === "#/_=_") {
       window.location.hash = "";
     }
   </script>
