swap out reactify for babelify and start working on nav bar

--- a/public/home.html
+++ b/public/home.html
@@ -8,7 +8,7 @@
  -->
 </head>
 <body>
-  <h2>Welcome home!</h2>
+  <!-- <h2>Welcome home!</h2> -->
   <div id="content"></div>
   <script src="scripts/app.js"></script>
   <script>
