create navbar component and pass user from main

--- a/public/home.html
+++ b/public/home.html
@@ -16,22 +16,22 @@
       window.location.hash = "";
     }
 
-    var getMe = function () {
-
-      return $.ajax({
-        url: 'http://localhost:3000/users/me'
-      })
-        .done(function(res){ 
-          console.log(res);
-          return res;
-        })
-        .fail(function(res){
-          console.log(res);
-          return res;
-        });
-
-    };
-    getMe();
+    // var getMe = function () {
+    //
+    //   return $.ajax({
+    //     url: 'http://localhost:3000/users/me'
+    //   })
+    //     .done(function(res){
+    //       console.log(res);
+    //       return res;
+    //     })
+    //     .fail(function(res){
+    //       console.log(res);
+    //       return res;
+    //     });
+    //
+    // };
+    // getMe();
   </script>
 </body>
 </html>
