--- a/public/home.html
+++ b/public/home.html
@@ -10,28 +10,29 @@
 <body>
   <!-- <h2>Welcome home!</h2> -->
   <div id="content"></div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="scripts/app.js"></script>
   <script>
     if (window.location.hash && window.location.hash === "#/_=_") {
       window.location.hash = "";
     }
 
-    // var getMe = function () {
-    //
-    //   return $.ajax({
-    //     url: 'http://localhost:3000/users/me'
-    //   })
-    //     .done(function(res){
-    //       console.log(res);
-    //       return res;
-    //     })
-    //     .fail(function(res){
-    //       console.log(res);
-    //       return res;
-    //     });
-    //
-    // };
-    // getMe();
+    var getQuest = function(questId) {
+
+        return $.ajax({
+            url: 'http://localhost:3000/quests/' + questId
+          })
+            .done(function (res) {
+              console.log(res);
+              return res;
+            })
+            .fail(function (res) {
+              console.log(res);
+              return res;
+            });
+      };
+
+    getQuest(2);
   </script>
 </body>
 </html>
