--- a/public/home.html
+++ b/public/home.html
@@ -17,61 +17,37 @@
       window.location.hash = "";
     }
 
-    // var getQuest = function(questId) {
-
-    //     return $.ajax({
-    //         url: 'http://localhost:3000/quests/' + questId
-    //       })
-    //         .done(function (res) {
-    //           console.log(res);
-    //           return res;
-    //         })
-    //         .fail(function (res) {
-    //           console.log(res);
-    //           return res;
-    //         });
-    //   };
-
-    var saveWaypoint = function(waypointObj, httpMethod) {
-      console.log('waypointObj passed in: ', waypointObj);
-      console.log('httpMethod passed in: ', httpMethod);
-      
-      if (!waypointObj || !httpMethod) {
-        throw new Error("Missing argument(s) to saveQuest(). Provide quest object and http method POST or PUT");
-      } else if (!(httpMethod === "POST" || httpMethod === "PUT")) {
-
-        throw new Error("Provided httpMethod must be POST or PUT");
+    var deleteQuest = function (questId) {
+      if (!questId) {
+        throw new Error("No questId argument provided. Provide quest id to deleteQuest()");
       }
 
       return $.ajax({
-        url: 'http://localhost:3000/quests/' + waypointObj.questId +'/waypoints',
-        method: httpMethod,
-        data: JSON.stringify(waypointObj),
-        dataType: 'json',
-        contentType: 'application/json'
+        url: 'http://localhost:3000/quests/' + questId,
+        method: 'DELETE'
       })
-        .done(function (res) {
-          console.log('saveQuest success: ')
-          console.log(res);
-          return res;
+        .done(function () {
+          return true;
         })
-        .fail(function (res) {
-          console.log('saveQuest fail: ')
-          console.log(res);
-          return res;
+        .fail(function () {
+          return false;
         });
     };
 
-    var obj = {
-      questId: 18,
-      indexInQuest: 0,
-      latitude: 123,
-      longitude: 123,
-      title: 'Big Tree',
-      description: 'My favorite tree to sniff. Try sniffing the tree.',
-    };
-
-    saveWaypoint(obj, 'POST');
+    deleteQuest(5);
+    deleteQuest(6);
+    deleteQuest(7);
+    deleteQuest(8);
+    deleteQuest(9);
+    deleteQuest(10);
+    deleteQuest(11);
+    deleteQuest(12);
+    deleteQuest(13);
+    deleteQuest(14);
+    deleteQuest(15);
+    deleteQuest(16);
+    deleteQuest(17);
+    
 
     // getQuest(2);
   </script>
