--- a/public/home.html
+++ b/public/home.html
@@ -13,9 +13,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="scripts/app.js"></script>
   <script>
+    // Removes #/_=_ hash Facebook appends to URL 
     if (window.location.hash && window.location.hash === "#/_=_") {
       window.location.hash = "";
-    }    
+    }
   </script>
 </body>
 </html>
