Fix errors with questForm population and disappearing waypoints

--- a/public/home.html
+++ b/public/home.html
@@ -4,11 +4,11 @@
   <title></title>
   <meta name="description" content="Waypoint's web application for creating quests">
   <meta name="viewport" content="width=device-width">
-<!--   <link rel="stylesheet" href="styles/main.css">
- -->
  <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDU7GdO_cm_qryUISMwk9C2hgxOdqF6-k">
     </script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
 </head>
 <body>
   <!-- <h2>Welcome home!</h2> -->
