(feat) Add markers for search box results and delete markers from state object when markers are deleted from map

--- a/public/home.html
+++ b/public/home.html
@@ -3,12 +3,14 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="description" content="Waypoint's web application for creating quests">
-  <meta name="viewport" content="width=device-width">
- <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDU7GdO_cm_qryUISMwk9C2hgxOdqF6-k">
-    </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
+<!--   <link rel="stylesheet" href="styles/main.css">
+ -->
+ <!--  <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDU7GdO_cm_qryUISMwk9C2hgxOdqF6-k">
+    </script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
 </head>
 <body>
   <!-- <h2>Welcome home!</h2> -->
