(feat) Final map features for search input and modified home page to just be / instead of /login

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--   <link rel="stylesheet" href="styles/main.css">
  -->
- <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.1/material.indigo-pink.min.css">
+  <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.1/material.indigo-pink.min.css" /> 
  <script src="https://storage.googleapis.com/code.getmdl.io/1.0.1/material.min.js"></script>
  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+ <style type="text/css">
+  body {
+    padding: 50px;
+  }
+ </style>
 </head>
 <body>
   <div>
@@ -16,7 +21,7 @@
       <h1>Waypoint</h1>
     </div>
     <div>
-      <a href="auth/facebook" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Log in with Facebook</a>
+      <a href="auth/facebook" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--primary">Log in with Facebook</a>
     </div>
   </div>
 </body>
