--- a/public/home.html
+++ b/public/home.html
@@ -5,6 +5,8 @@
   <meta name="description" content="Waypoint's web application for creating quests">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
+  <script src="semantic/dist/semantic.min.js"></script>
 <!--   <link rel="stylesheet" href="styles/main.css">
  -->
  <!--  <script type="text/javascript"
