--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,30 @@
   <title></title>
   <meta name="description" content="Waypoint's web application for creating quests">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="node_modules/semantic/dist/semantic.min.css">
+  <script src="semantic/dist/semantic.min.js"></script>
 <!--   <link rel="stylesheet" href="styles/main.css">
  -->
-  <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.1/material.indigo-pink.min.css" /> 
- <script src="https://storage.googleapis.com/code.getmdl.io/1.0.1/material.min.js"></script>
- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
  <style type="text/css">
   body {
     padding: 50px;
+    font-family: "Roboto", "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  }
+  a.btn-fb-login {
+    background: '#3A5999';
+    font-size: 14px;
+    color: '#FFFFFF';
+    padding: 10px;
   }
  </style>
 </head>
 <body>
   <div>
     <div>
-      <h1>Waypoint</h1>
+      <h1>Waypoint Beta</h1>
     </div>
     <div>
-      <a href="auth/facebook" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--primary">Log in with Facebook</a>
+      <a href="auth/facebook" class="btn-fb-login">Log in with Facebook</a>
     </div>
   </div>
 </body>
