--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,21 @@
   .column {
     padding: 20px;
   }
+  .color {
+    padding: 40px;
+    color: #FFFFFF;
+    display: inline-block;
+  }
  </style>
 </head>
 <body>
+  <div class="ui stackable one column grid">
+      <div class="color" style="background: #9E9E9E;">#9E9E9E</div>
+      <div class="color" style="background: #606060;">#606060</div>
+      <div class="color" style="background: #F7412D;">#F7412D</div>
+      <div class="color" style="background: #348F38;">#348F38</div>
+      <div class="color" style="background: #4CAF4F;">#4CAF4F</div>
+  </div>
   <div class="ui stackable two column grid">
     <div class="row">
       <div class="column vertical-align" id="valign">
