(feat) Continue styling landing page

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
     <div class="row">
       <div class="column vertical-align" id="valign">
         <div class="company-content">
-          <h1><img id="waypoint-logo" src="assets/waypoint_logo.svg" />
+          <h1><img id="waypoint-logo" src="assets/waypoint_logo_2.svg" />
           Waypoint Beta</h1>
           <p class="tagline">Maecenas faucibus mollis interdum.</p>
           <p class="description">Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
