--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
       top: auto;
     }
   }
+  #fb-login {
+    color: #FFFFFF;
+  }
   img#waypoint-logo {
     width: 18px;
     position: relative;
@@ -81,13 +84,13 @@
     <div class="row">
       <div class="column vertical-align" id="valign">
         <div class="company-content">
-          <h1><img id="waypoint-logo" src="assets/waypoint_logo_2.svg" />
+          <h1><img id="waypoint-logo" src="assets/waypoint_icon_2.svg" />
           Waypoint Beta</h1>
           <p class="tagline">Maecenas faucibus mollis interdum.</p>
           <p class="description">Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <div class="ui facebook button">
-            <i class="facebook icon"></i>
-            Get early access
+            <a id="fb-login" href="/auth/facebook"><i class="facebook icon"></i>
+            Get early access</a>
           </div>
         </div>
       </div>
