--- a/public/home.html
+++ b/public/home.html
@@ -14,6 +14,11 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDU7GdO_cm_qryUISMwk9C2hgxOdqF6-k">
     </script> -->
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+  <style type="text/css">
+    body {
+      /*padding:*/
+    }
+  </style>
 </head>
 <body>
   <!-- <h2>Welcome home!</h2> -->
