(feat) Add 100% with for homepage

--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
   <style type="text/css">
     body {
-      /*padding:*/
+      width: 100%;
     }
   </style>
 </head>
