(feat) Start UX redesign

--- a/public/index.html
+++ b/public/index.html
@@ -71,11 +71,10 @@
           Waypoint Beta</h1>
           <p class="tagline">Maecenas faucibus mollis interdum.</p>
           <p class="description">Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <a id="fb-login" href="/auth/facebook">
-            <div class="ui facebook button">
-              <i class="facebook icon"></i>get early access
-            </div>
-          </a>
+          <button class="ui facebook button">
+            <a id="fb-login" href="/auth/facebook"><i class="facebook icon"></i>
+            Get early access</a>
+          </button>
         </div>
       </div>
       <div class="eight wide column">
