--- a/public/edit.html
+++ b/public/edit.html
@@ -13,24 +13,17 @@
  <!--  <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDU7GdO_cm_qryUISMwk9C2hgxOdqF6-k">
     </script> -->
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=false&libraries=places"></script>
   <style type="text/css">
     body {
       width: 100%;
-    }
-    .rf-fieldset {
-      border: none;
     }
   </style>
 </head>
 <body>
   <div id="content"></div>
   <script src="scripts/app.js"></script>
-  <script>
-    // Removes #/_=_ hash Facebook appends to URL
-    if (window.location.hash && window.location.hash === "#/_=_") {
-      window.location.hash = "";
-    }
-  </script>
 </body>
 </html>
+
+
