--- a/public/home.html
+++ b/public/home.html
@@ -13,7 +13,7 @@
  <!--  <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDU7GdO_cm_qryUISMwk9C2hgxOdqF6-k">
     </script> -->
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=false&libraries=places"></script>
   <style type="text/css">
     body {
       width: 100%;
