--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,28 @@
   <script src="/semantic/dist/semantic.min.js"></script>
  <style type="text/css">
   body {
-    padding: 50px;
     width: 100%;
   }
+  .nav {
+    background: #eee;
+    padding: 10px;
+    padding-left: 20px;
+    color: #242e8f;
+    border-bottom: 1px solid #e5e5e5;
+  }
   h1 {
-    margin-bottom: 20px;
-    font-weight: 200;
-    color: #606060;
+    margin-left: 20px;
+    font-weight: 100;
+    font-size: 20px;
   }
   #fb-login {
     color: #FFFFFF;
   }
+  .company-content {
+    padding: 50px;
+  }
   img#waypoint-logo {
-    width: 18px;
+    width: 14px;
     position: relative;
     top: 4px;
   }
@@ -34,19 +43,16 @@
     margin: 0 auto;
   }
   p.tagline {
-    color: #348F38;
-    font-size: 20px;
+    color: #242E8F;
+    font-size: 24px;
     font-weight: 500;
     margin-bottom: 20px;
   }
   p.description {
-    color: #606060;
-    font-size: 16px;
+    color: #2A2A2A;
+    font-size: 20px;
     margin-bottom: 40px;
-    line-height: 20px;
-  }
-  .column {
-    padding: 20px;
+    line-height: 22px;
   }
   .color {
     padding: 40px;
@@ -56,19 +62,16 @@
  </style>
 </head>
 <body>
-  <div class="ui stackable one column grid">
-      <div class="color" style="background: #9E9E9E;">#9E9E9E</div>
-      <div class="color" style="background: #606060;">#606060</div>
-      <div class="color" style="background: #F7412D;">#F7412D</div>
-      <div class="color" style="background: #348F38;">#348F38</div>
-      <div class="color" style="background: #4CAF4F;">#4CAF4F</div>
-  </div>
   <div class="ui grid stackable">
+    <div class="row">
+      <div class="sixteen wide column nav">
+        <h1><img id="waypoint-logo" src="assets/waypoint_icon_2.svg" />
+        Waypoint Beta</h1>
+      </div>
+    </div>
     <div class="row">
       <div class="eight wide column">
         <div class="company-content">
-          <h1><img id="waypoint-logo" src="assets/waypoint_icon_2.svg" />
-          Waypoint Beta</h1>
           <p class="tagline">Maecenas faucibus mollis interdum.</p>
           <p class="description">Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <button class="ui facebook button">
