--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,14 @@
   }
   .nav {
     background: #eee;
-    padding: 10px;
-    padding-left: 20px;
+    padding: 15px 20px;
     color: #242e8f;
     border-bottom: 1px solid #e5e5e5;
   }
   h1 {
     margin-left: 20px;
     font-weight: 100;
-    font-size: 20px;
+    font-size: 18px;
   }
   #fb-login {
     color: #FFFFFF;
