fix ui bugs for creating and deleting quests

--- a/public/index.html
+++ b/public/index.html
@@ -73,10 +73,11 @@
         <div class="company-content">
           <p class="tagline">Maecenas faucibus mollis interdum.</p>
           <p class="description">Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <button class="ui facebook button">
-            <a id="fb-login" href="/auth/facebook"><i class="facebook icon"></i>
-            Get early access</a>
-          </button>
+          <a id="fb-login" href="/auth/facebook">
+            <button class="ui facebook button">
+              <i class="facebook icon"></i>Get early access
+            </button>
+          </a>
         </div>
       </div>
       <div class="eight wide column">
