(bug) fix typo in script tag

--- a/public/home.html
+++ b/public/home.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Waypoint's web application for creating quests">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script type="text/javacript" src="../client/scripts/helpers/background-dim.js"
+  <script type="text/javacript" src="../client/scripts/helpers/background-dim.js">
 </script>
   <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
   <script src="/semantic/dist/semantic.min.js"></script>
