--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   .nav {
     background: #eee;
     padding: 15px 20px;
-    color: #242E8F;
+    color: #555555;
     border-bottom: 1px solid #e5e5e5;
   }
   h1 {
