--- a/public/index.html
+++ b/public/index.html
@@ -86,10 +86,10 @@
         </div>
       </div>
     </div>
-    <div class="row">
+   <!--  <div class="row">
       <div class="eight wide column">iPhone templates with Waypoint screenshots</div>
       <div class="eight wide column">Description of iphone app/waypoint features</div>
-    </div>
+    </div> -->
   </div>
 </body>
 </html>
