(feat) Update text style across app for consistency

--- a/public/home.html
+++ b/public/home.html
@@ -18,6 +18,10 @@
     .rf-fieldset {
       border: none;
     }
+    .ui.form .field>label {
+      color: #555555;
+      font-weight: 300;
+    }
   </style>
 </head>
 <body>
