--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     margin: 0 auto;
   }
   p.tagline {
-    color: #242E8F;
+    color: #4c4c4c;
     font-size: 38px;
     line-height: 46px;
     font-weight: 500;
